Update and rename H2M4T1 - PENILAIAN RAPOT/index.html to M4T1 - PENILAIAN RAPOTindex.html

--- a/M4T1 - PENILAIAN RAPOTindex.html
+++ b/M4T1 - PENILAIAN RAPOTindex.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
     <head>
-        <title>SE - LATIHAN KONDISIONl 1</title>
+        <title>SE - TUGAS KONDISIONl 1</title>
     </head>
     <body>
         <h2>220472 - UMMI PRATIDINA</h2>
